# IOIOIO

./: .gitignore  CLAUDE.md  PLAN.md  PROMPT.md  README.md  docker-compose.yml  schema.sql
backend/: Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/app/: main.py
backend/app/api/: activities.py  companies.py  company_relationships.py  contacts.py  dashboard.py  deps.py  events.py  industries.py  invoices.py  pipeline_entries.py  pipeline_stages.py  relationship_types.py  reports.py  roles.py  tags.py  users.py
backend/app/core/: config.py
backend/app/db/: seeds.py  seeds_demo.py  session.py
backend/app/models/: __init__.py  activity.py  company.py  contact.py  document.py  enums.py  event.py  industry.py  invoice.py  pipeline.py  relationship.py  role.py  tag.py  user.py
backend/app/schemas/: activity.py  common.py  company.py  company_relationship.py  contact.py  dashboard.py  document.py  event.py  industry.py  invoice.py  role.py  (+6 more)
backend/migrations/: env.py
backend/tests/: conftest.py  test_activities.py  test_companies.py  test_company_relationships.py  test_contacts.py  test_dashboard.py  test_dashboard_extended.py  test_documents.py  test_event_kpi.py  test_events.py  test_events_crud.py  test_filters.py  test_integration_activities_dashboard.py  test_integration_bulk_and_constraints.py  test_integration_company_filters.py  test_integration_pipeline_flow.py  test_invoices.py  test_pipeline_entries.py  test_pipeline_extended.py  test_pipeline_transitions.py  test_reference.py  test_reports.py  test_tags.py  test_users_and_misc.py
(+227 files in other folders)
